--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-react",
+  "name": "reactjs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.1.7",
-    "axios": "^1.3.0",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
